--- a/config/tidbit.conf
+++ b/config/tidbit.conf
@@ -2,10 +2,19 @@
 # SPDX-License-Identifier: MIT
 
 # Enable Encoders
-CONFIG_EC11=y
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_EC11=n
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=n
 
 # Enable underglow
 #CONFIG_ZMK_RGB_UNDERGLOW=y
 # Use the STRIP config specific to the LEDs you're using
 #CONFIG_WS2812_STRIP=y
+
+
+#Force enable power management and disable external power, to troubleshoot power leakage. Remember that deep sleep is n by default!
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_WS2812_STRIP=n
+CONFIG_ZMK_EXT_POWER=n
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
