--- a/config/tidbit.conf
+++ b/config/tidbit.conf
@@ -2,8 +2,8 @@
 # SPDX-License-Identifier: MIT
 
 # Enable Encoders
-CONFIG_EC11=n
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=n
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Enable underglow
 #CONFIG_ZMK_RGB_UNDERGLOW=y
@@ -17,4 +17,4 @@ CONFIG_ZMK_RGB_UNDERGLOW=n
 CONFIG_WS2812_STRIP=n
 CONFIG_ZMK_EXT_POWER=n
 CONFIG_ZMK_IDLE_TIMEOUT=30000
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
