Halved sleep timeout to try to fix broken wake on keypress. Removed setting to desensitise encoder and made encoder section in keymap generally more like on Tidbit 1

--- a/config/tidbit.conf
+++ b/config/tidbit.conf
@@ -10,11 +10,11 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 # Use the STRIP config specific to the LEDs you're using
 #CONFIG_WS2812_STRIP=y
 
-
 #Force enable power management and disable external power, to troubleshoot power leakage. Remember that deep sleep is n by default!
+#Something has broken the wake on keypress. Will try halving the sleep timeout to half an hour (1800000 ms)
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_RGB_UNDERGLOW=n
 CONFIG_WS2812_STRIP=n
 CONFIG_ZMK_EXT_POWER=n
 CONFIG_ZMK_IDLE_TIMEOUT=30000
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
